# recipebox

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  main.py  pyproject.toml  recipebox.db
.github/workflows/: ci.yaml
app/: app.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  privacy.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/app/: _layout.tsx  login.tsx
app/app/(tabs)/: _layout.tsx  activity.tsx  explore.tsx  index.tsx  library.tsx  profile.tsx  recipes.tsx
app/app/(tabs)/recipe/: [id].tsx
app/components/: LoginForm.tsx  ManualRecipeForm.tsx  login-form.tsx  manual-recipe-form.tsx  pending-recipe-shares.tsx  push-permission-prompt.tsx  recipe-card.tsx  recipe-creation-drawer.tsx  recipe-share-modal.tsx  recipes-page.tsx  signup-form.tsx  skeleton.tsx  themed-text.tsx  themed-view.tsx  user-search-combobox.tsx
app/components/ui/: dropdown.tsx
app/constants/: design-system.ts
app/hooks/: use-activity.ts  use-friends.ts  use-notifications.ts  use-recipe-details.ts  use-recipes.ts  use-user.ts  use-user.tsx  useRecipes.ts  useStorage.ts  useUser.ts
app/src/: AddRecipeModal.tsx  App.tsx  ReactCardFlip.tsx  RecipeBox3D.tsx  SearchBar.tsx  index.css
app/src/lib/: auth.ts
app/src/lib/api/: client.ts  v1.d.ts
db/: schema.sql
seed/: recipes.json  users.csv
server/: .dockerignore  Dockerfile  main.py  nginx.conf  pyproject.toml  run.sh  soup.html  sqlc.yaml
server/commands/: migrate_to_pg.py
server/db/: query.sql  schema-sqlc.sql  schema.sql
server/db/migrations/: 20250803211143_initial.sql  20250827005941_add_friends.sql  20250827021238_user_privacy.sql  20250827022009_share_recipe.sql  20250830115304_parade_search.sql  20250831014518_alter_pks.sql  20250831115304_parade_search.sql  20250831115922_rec_tracking.sql  20250901022533_activity_log.sql  20250904004250_add_recipe_type.sql  20250904214144_remove_unused_table.sql  20250906190105_rework_schema.sql  20250907142330_recursive_recipes.sql  20250907193907_add_search_index_to_ingredient.sql  20250907205340_improve_recipe_indexing.sql  20250909235457_push_token.sql  20250912212801_push_permission_status.sql  20250914141917_rework_sharing.sql  20260707003048_drop_rec_tracking.sql
server/db/queries/: activity.sql  recipes.sql  sharing.sql  users.sql
server/src/: auth.py  dependencies.py  old_crud.py  parsing.py  recipe.py  schemas.py  settings.py
server/src/commands/: seed_recipes.py
server/src/controllers/: __init__.py  activity.py  auth.py  notifications.py  recipes.py  sharing.py  users.py
server/src/crud/: activity.py  models.py  query.py  recipes.py  sharing.py  users.py
server/src/services/: notifications.py  recipe.py
server/templates/: index.html
src/: crud.py  recipe.py  settings.py
templates/: index.html
